Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14719

Intermittent "Unhandled exception / c0000005", during "advapi32 : security", on testbots. Since CORE-14434 0.4.9-dev-555-g3c1b783

    XMLWordPrintable

Details

    Description

      Noticed while checking CORE-14349.
      Similar to CORE-14521!

      {{Apr 01 18:42 3c1b7834e15b... failure #20041}}
      updated modules/rostests/winetests/advapi32/security.c

      —

      https://build.reactos.org/builders/Test%20KVM?numbuilds=200

      –

      First failure:
      {{Apr 01 19:22 fdc236c65d35... failure #20044}}

      Running Wine Test, Module: advapi32, Test: security
      ...
      security.c:4460: Test failed: ConvertStringSecurityDescriptorToSecurityDescriptor should have failed with ERROR_INVALID_PARAMETER instead of 1305
       
      // Usual:
      security.c:4504: Test failed: got 76
      ...
       
      // Random failure:
      Unhandled exception
      ExceptionCode:    c0000005
      Faulting Address:   244000
      CS:EIP 1b:7c5d8451
      DS 23 ES 23 FS 3b GS 0
      EAX: 00000000   EBX: 00244000   ECX: 00001000
      EDX: 00243ffe   EBP: 0022fc10   ESI: 0022fc48   ESP: 0022fbb8
      EDI: 00000000   EFLAGS: 00010293
      Address:
      <advapi32.dll:28451> (C:\ReactOS\system32\advapi32.dll@7c5b0000)
      Frames:
      <advapi32.dll:28b61> (C:\ReactOS\system32\advapi32.dll@7c5b0000)
      <advapi32.dll:2b369> (C:\ReactOS\system32\advapi32.dll@7c5b0000)
      <advapi32.dll:2b4db> (C:\ReactOS\system32\advapi32.dll@7c5b0000)
      <advapi32_winetest.exe:2bd0e> (C:\ReactOS\bin\advapi32_winetest.exe@400000)
      <advapi32_winetest.exe:4f9fa> (C:\ReactOS\bin\advapi32_winetest.exe@400000)
      <advapi32_winetest.exe:6007b> (C:\ReactOS\bin\advapi32_winetest.exe@400000)
      <advapi32_winetest.exe:60987> (C:\ReactOS\bin\advapi32_winetest.exe@400000)
      <advapi32_winetest.exe:609e9> (C:\ReactOS\bin\advapi32_winetest.exe@400000)
      <kernel32.dll:10957> (C:\ReactOS\system32\kernel32.dll@7c710000)

      –

      Ongoing: 20046 20048 20050 20052-20054 20058 20061-20063 20067-20070 20078 ... 20100-20103 20106-20109 ... 20620 20622-20623

      —

      Test VBox has this too:
      7610 7613 7617 ... 7670 7676 ... 8161 8165

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              Serge Gautherie Serge Gautherie
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: